--- a/templates/prototype/upload_part1.twig
+++ b/templates/prototype/upload_part1.twig
@@ -56,8 +56,8 @@
 <div class="row">
 <div class="row g-4 pb-5 row-cols-1 row-cols-lg-3">
       <div class="feature col">
-        <div class="feature-icon bg-primary bg-gradient">
-          {{ icon('film', 32) }}
+        <div class="feature-icon bg-primary">
+          {{ icon_alt('film', 32) }}
         </div>
         <h2>{{ __("Video") }}</h2>
         <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
@@ -67,24 +67,24 @@
         </a>
       </div>
       <div class="feature col">
-        <div class="feature-icon bg-carrot bg-gradient">
-          {{ icon('music-note-beamed', 32) }}
+        <div class="feature-icon bg-carrot">
+          {{ icon_alt('music-note-beamed', 32) }}
         </div>
         <h2>{{ __("Music") }}</h2>
         <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
-        <a href="#" class="icon-link">
+        <a href="upload_music.php" class="icon-link">
           {{ __("Upload music") }}
           {{ icon('chevron-right', 16) }}
         </a>
       </div>
       <div class="feature col">
-        <div class="feature-icon bg-primary bg-success">
-          {{ icon('easel', 32) }}
+        <div class="feature-icon bg-violet">
+          {{ icon_alt('easel', 32) }}
         </div>
         <h2>{{ __("Artwork") }}</h2>
         <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
 		<a href="#" class="icon-link">
-          {{ __("Upload artwork") }}
+          {{ __("Upload artwork") }} (Unfinished)
           {{ icon('chevron-right', 16) }}
         </a>
       </div>
