--- a/templates/default/_layout.twig
+++ b/templates/default/_layout.twig
@@ -20,6 +20,16 @@
 		subscribe_string = '{{ __("Subscribe") }}';
 		unsubscribe_string = '{{ __("Unsubscribe") }}';
 	</script>
+	<script> 
+	var $buoop = {required:{e:-6,f:-6,o:-6,s:12,c:-6},insecure:true,api:2021.10 }; 
+	function $buo_f(){ 
+	 var e = document.createElement("script"); 
+	 e.src = "//browser-update.org/update.min.js"; 
+	 document.body.appendChild(e);
+	};
+	try {document.addEventListener("DOMContentLoaded", $buo_f,false)}
+	catch(e){window.attachEvent("onload", $buo_f)}
+	</script>
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -30,7 +40,7 @@
 	<meta name="msapplication-TileColor" content="#2d89ef">
 	<meta name="msapplication-TileImage" content="/mstile-144x144.png">
 	<meta name="theme-color" content="#0065d8">
-	<title>{% block title %}{% endblock %} - squareBracket Beta 1.9</title>
+	<title>{% block title %}{% endblock %} - squareBracket Beta 2</title>
 </head>
 <style>
 	.bi {
@@ -148,11 +158,10 @@
 			<div class="container">
 			<div class="card">
 			<div class="card-body">
-			<h4 class="my-0">squareBracket Beta 1.9</h4>
+			<h4 class="my-0">squareBracket Beta 2</h4>
 			<!-- 2020 was when work on PokTube (the predecessor of squareBracket) was started. Techically, PokTube and squareBracket are the same project, just with different codebases. -gr 7/20/2021 -->
 			<!-- is it me or is morale a bit... low? it seems like there's no hope for squarebracket or some shit. don't be surprised if i end up leaving the project -gr 8/3/2021 -->
 			<p class="my-0"><b>{{ __("By the squareBracket contributors") }}</b> · 2020-{{ 'now' | date('Y') }} | <b>{{ __("Users registered") }}</b>: {{ stats.usercount }} | <b>{{ __("Videos uploaded") }}</b>: {{ stats.videocount }}</p>
-			<p class="my-0"><a href="about.php" class="me-1">{{ __("About") }}</a> <a class="me-1">{{ __("Terms") }}</a> <a class="me-1">{{ __("Guidelines") }}</a> <a class="me-1">{{ __("Contact") }}</a></p>
 			</div>
 			</div>
 		</footer>
