--- a/templates/prototype/watch.twig
+++ b/templates/prototype/watch.twig
@@ -1,34 +1,67 @@
 {% extends "_layout.twig" %}
+{% block head %}
+	<meta name="title" content="{{ video.title }} - squareBracket">
+	<meta name="description" content="{{ video.description|length > 250 ? video.description|slice(0, 250) ~ '...' : video.description }}">
+	<meta property="og:site_name" content="SquareBracket"/>
+	<meta property="og:title" content="{{ video.title }} - squareBracket">
+	<meta property="og:description" content="{{ video.description|length > 250 ? video.description|slice(0, 250) ~ '...' : video.description }}">
+	<meta property="og:image" content="{{ domain }}{{ video_thumbnail(video.video_id) }}">
+	<meta property="og:url" content="{{ page_url }}">
+	<meta property="twitter:title" content="{{ video.title }} - squareBracket">
+	<meta property="twitter:description" content="{{ video.description|length > 250 ? video.description|slice(0, 250) ~ '...' : video.description }}">
+	<meta property="twitter:image" content="{{ domain }}{{ video_thumbnail(video.video_id) }}">
+	<meta name="twitter:card" content="summary_large_image">
+	<script>
+		video_id = '{{ video.video_id }}';
+		user_id = '{{ video.author }}';
+	</script>
+	<link href="https://unpkg.com/plyr@3.6.8/dist/plyr.css" rel="stylesheet">
+{% endblock %}
 {% block title %}{{ video.title }}{% endblock %}
 {% block content %}
 <div class="row">
 <div class="col-8">
-		<div id="playerContainer">
+		<div id="container" style="height: 30rem;">
+			<!--- todo: redo "video processed" message to use _error.twig -gr 7/22/2021 --->
 			{% if (video.flags b-and 2) %}
-				<div style="height: 30rem; background-color: black; color: white; text-align: center; padding: 15rem">
+				<div style="background-color: black; color: white; text-align: center; padding: 15rem">
 					{{ __("This video is being processed. Try again later.") }}
 				</div>
+			{% else %}
+				<video controls crossorigin playsinline poster="{{ video_thumbnail(video.video_id) }}"></video>
 			{% endif %}
 		</div>
-		<script src="https://cdn.jsdelivr.net/npm/indigo-player@1/lib/indigo-player.js"></script>
+		<script src="https://cdn.dashjs.org/latest/dash.all.min.js"></script>
+		<script src="https://unpkg.com/plyr@3.6.8/dist/plyr.min.js"></script>
+		<script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=es6,Array.prototype.includes,CustomEvent,Object.entries,Object.values,URL"></script>
+		<!-- indigo player (the player we used back in the milestone/alpha days) was starting to have a lot of techincal issues by the time of alpha 3.
+		videos would randomly glitch on indigo and sometimes it wouldn't even load the goddamn video (not a ffmpeg issue this time). 
+		we at squarebracket have decided to use plyr instead of indigo. the aspect ratio is a bit wonky but that should be fixed soon 
+		-gamerappa, July 31st 2021 -->
+		    <style>
+				.plyr--video {
+					height: 30rem;
+					--plyr-color-main: var(--bs-primary);
+					--plyr-font-family: var(--bs-font-sans-serif);
+				}
+		    </style>
 		<script>
-			{% if not video.flags == 0010 %}
-				const config = {
-					autoplay: true,
-					sources: [
-						{
-							type: 'dash',
-							src: '{{ video.videofile }}'
-						}
-					],
-					ui: {
-						image: '{{ video_thumbnail(video.video_id) }}',
-						pip: true,
-						locale: '{{ current_user.language | replace({'_': '-'}) }}'
-					}
-				};
-				const element = document.getElementById('playerContainer');
-				const player = IndigoPlayer.init(element, config);
+			{% if not (video.flags b-and 2) %}
+				document.addEventListener('DOMContentLoaded', () => {
+					const source = '{{ video.videofile }}';
+					// For more dash options, see https://github.com/Dash-Industry-Forum/dash.js
+					const dash = dashjs.MediaPlayer().create();
+					const video = document.querySelector('video');
+					dash.initialize(video, source, true);
+
+					// Update caption tracks after initializing Plyr to get the generated captions
+					// For more options see: https://github.com/sampotts/plyr/#options
+					const player = new Plyr(video);
+
+					// Expose player and dash so they can be used from the console
+					window.player = player;
+					window.dash = dash;
+				});
 			{% endif %}
 		</script>
 		<p class="uploader-info">{{ __("Published on %s", [video.time | date('M j, Y')]) }} by <a href="user.php?name={{ video.u_username }}">{{ userlink(video, 'u_') }}</a><br>
