fix sbnext's uses of display_name and username

--- a/forum/templates/_layout.twig
+++ b/forum/templates/_layout.twig
@@ -12,12 +12,11 @@
 		<div class="top">
 			<a href="../"><img class="picon" src="../assets/logo.png"/></a>
 			<ul class="menu left">
-				<li><a href="../popular.php" class="btn">Popular</a></li>
-				<li><a href="../top.php" class="btn">Top</a></li>
-				<li><a href="../latest.php" class="btn">New</a></li>
-				<li><a href="../chat.php" class="btn">Chat</a></li>
-				<li><a href="./" class="btn">Forum</a></li>
-				<li><a href="../contests.php" class="btn">Contests</a></li>
+				<li><a href="../" class="btn">Home</a></li>
+				<li><a href="../browse.php" class="btn">Videos</a></li>
+				<li><a href="../music.php" class="btn">Music</a></li>
+				<li><a href="../artwork.php" class="btn">Artwork</a></li>
+				<li><a href="./" class="btn">Forums</a></li>
 				<li><a href="../search.php" class="btn"><img src="../assets/icons/search.svg" class="search"></a></li>
 			</ul>
 			<ul class="menu right">
