--- a/forum/templates/memberlist.twig
+++ b/forum/templates/memberlist.twig
@@ -30,7 +30,7 @@
 		<td class="b center">{{ user.id }}</td>
 		<td class="b center">
 			{% if user.avatar %}
-				<img src="userpic/{{ user.id }}" width="60" height="60">
+				<img src="assets/profpic/{{ user.name }}" width="60" height="60">
 			{% endif %}
 		</td>
 		<td class="b">{{ userlink(user) }}</td>
