--- a/templates/prototype/register.twig
+++ b/templates/prototype/register.twig
@@ -1,4 +1,4 @@
-{% extends "_layout.twig" %}
+{% extends "_layout-login.twig" %}
 
 {% block title %}Register{% endblock %}
 
@@ -13,6 +13,8 @@
 register page should be merged with login page on sbnext
 -gamerappa 7/10/2021 -->
   <form method="post" name="registerForm" id="registerForm" action="register.php">
+    <img class="mb-2" src="/assets/logo_border_placeholder.png" alt="squareBracket" width="90">
+	<h3 class="mb-4 text-white">{{ __("Register") }}</h3>
 <form method="POST">
 	<div class="card">
 		<div class="card-body">
@@ -47,8 +49,8 @@ register page should be merged with login page on sbnext
 		</div>
 	</div>
 </div>
-	<p class="mt-2"><b>{{ __("You must be 13 years or older to register to squareBracket.") }}</b> <br>{{ __("Account passwords are hashed with bcrypt.") }}</p>
-	<p class="mt-5 mb-3">{{ __("By squareBracket contributors") }} · 2020-{{ 'now' | date('Y') }}</p>
+	<p class="mt-2 text-white"><b>{{ __("You must be 13 years or older to register to squareBracket.") }}</b> <br>{{ __("Account passwords are hashed with bcrypt.") }}</p>
+	<p class="mt-5 mb-3 text-white">{{ __("By squareBracket contributors") }} · 2020-{{ 'now' | date('Y') }}</p>
 </form>
 </main>
 {% if hcaptcha_sitekey %}
