add browse page

--- a/templates/prototype/index.twig
+++ b/templates/prototype/index.twig
@@ -33,7 +33,7 @@
 		{% endif %}
 	  </div>
     </div>
-	<h1>Recently uploaded to squareBracket</h1>
+	<h3>Recently uploaded to squareBracket</h3>
 	{% for video in videos %}
 		{{ video_box(video) }}
 	{% else %}
@@ -46,6 +46,10 @@
 		We've heard it, the old layout sucked so
 		we have redesigned squareBracket to have
 		a better user interface.</p>
+		<p>We have introduced many new features! Including:</p>
+		<li>Categories</li>
+		<li>Forums</li>
+		<li>Music</li>
 	</div>
 </div>
 <br><br>
