--- a/forum/templates/forum.twig
+++ b/forum/templates/forum.twig
@@ -46,7 +46,7 @@
 			{% set lsticky = thread.sticky %}
 		{% endif %}
 
-		<tr class="n{{ tr }} center">
+		<tr class="n2 center">
 			<td class="b n1">
 				{% if log and not thread.isread %}
 					{% if thread.closed %}
