--- a/forum/templates/index.twig
+++ b/forum/templates/index.twig
@@ -27,8 +27,9 @@
 
 	<tr class="center">
 		<td class="b n1">
+			<img src="/assets/off.png">
 			{% if log and forum.lastdate > forum.rtime %}
-				{{ new_status("n") }}
+			<img src="/assets/on.png">
 			{% endif %}
 		</td>
 		<td class="b n2 left">
