--- a/assets/_style_forums.scss
+++ b/assets/_style_forums.scss
@@ -6,13 +6,14 @@ table.c1 {
 	border-collapse: collapse;
 	width: 100%;
 
-	tr.h, tr.c {
+	tr.c {
 		text-align: center;
 	}
 
 	tr.h {
-		background: #3367aa;
+		background: #6e94b7;
 		color: #ffffff;
+		font-weight: bold;
 	}
 
 	tr.c {
@@ -29,8 +30,8 @@ table.c1 {
 		border: 0px none;
 	}
 
-	tr.n1, td.n1 { background: #f5f5f5; }
-	tr.n2, td.n2 { background: #ebebeb; }
+	tr.n1, td.n1 { background: #afc6db; }
+	tr.n2, td.n2 { background: #ffffff; }
 	tr.n3, td.n3 { background: #d4d4d4; }
 
 	.delete {
