fix settings and forum indicator

--- a/forum/templates/index.twig
+++ b/forum/templates/index.twig
@@ -27,9 +27,10 @@
 
 	<tr class="center">
 		<td class="b n1">
-			<img src="/assets/off.png">
 			{% if log and forum.lastdate > forum.rtime %}
 			<img src="/assets/on.png">
+			{% else %}
+			<img src="/assets/off.png">
 			{% endif %}
 		</td>
 		<td class="b n2 left">
