--- a/templates/prototype/_layout.twig
+++ b/templates/prototype/_layout.twig
@@ -58,25 +58,25 @@
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-secondary" type="submit">Search</button>
       </form>
-	  {% if logged_in %}
+	  {% if log %}
 	  <li class="nav-item">
         <a class="nav-link" href="upload_start.php">{{ icon('upload', 24) }}</a>
       </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-		  <img src="{{ profile_image(current_user.name) }}" alt="{{ current_user.name }}" class="rounded bi" width="24" height="24"></a>
+		  <img src="{{ profile_image(userdata.name) }}" alt="{{ userdata.name }}" class="rounded bi" width="24" height="24"></a>
 		  	<ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
 				<div class="p-2 mb-2 bg-light border-bottom">
 				<div class="row">
 					<div class="col-5">
-					<img src="{{ profile_image(current_user.name) }}" alt="{{ current_user.name }}" class="rounded w-100 bi"></a>
+					<img src="{{ profile_image(userdata.name) }}" alt="{{ userdata.name }}" class="rounded w-100 bi"></a>
 					</div>
 					<div class="col-7 ps-0">
-						<p>@{{current_user.name}}</p>
+						<p>@{{userdata.name}}</p>
 					</div>
 				</div>
 				</div>
-				<li><a class="dropdown-item" href="user.php?name={{ current_user.name }}">{{ icon('person-square', 16) }} My profile</a></li>
+				<li><a class="dropdown-item" href="user.php?name={{ userdata.name }}">{{ icon('person-square', 16) }} My profile</a></li>
 				<li><a class="dropdown-item" href="#">{{ icon('gear', 16) }} Studio</a></li>
 				<li><a class="dropdown-item" href="#">{{ icon('palette2', 16) }} Appearance</a></li>
 				<li><a class="dropdown-item" href="settings.php">{{ icon('sliders', 16) }} Settings</a></li>
