--- a/templates/prototype/index.twig
+++ b/templates/prototype/index.twig
@@ -4,15 +4,15 @@
 <div class="row">
 	<div class="col-8">
 	<div class="p-1 mb-4 bg-light rounded-3">
-	  <div class="container-fluid {% if logged_in %}py-3{% else %}py-5{% endif %}">
-	  		{% if logged_in %}
+	  <div class="container-fluid {% if log %}py-3{% else %}py-5{% endif %}">
+	  		{% if log %}
 			<div class="row">
 				<div class="col-3 d-none d-md-block">
-					<img class="rounded w-100" src="{{ profile_image(current_user.name) }}"  alt="{{ current_user.name }}">
+					<img class="rounded w-100" src="{{ profile_image(userdata.name) }}"  alt="{{ userdata.name }}">
 				</div>
 				<div class="col-12 col-md-9">
 					<p class="text-start">
-					<h3>Welcome, {{ current_user.title }}</h3>
+					<h3>Welcome, {{ userdata.title }}</h3>
 						{# hack to prevent twig from outputing the number 1 #}
 						{% if totalSubscribers != 1 %}
 							{% set pluralSubscribers = __("s") %}
@@ -20,7 +20,7 @@
 						{% if totalViews != 1 %}
 							{% set pluralViews = __("s") %}
 						{% endif %}
-						<p class="fs-5 mb-1">@{{ current_user.name }}</p>
+						<p class="fs-5 mb-1">@{{ userdata.name }}</p>
 						<p class="mb-2">{{ __("%s subscriber%s", [totalSubscribers ?? __("no"), pluralSubscribers]) }}</p>
 						<p class="mb-2">{{ __("%s view%s", [totalViews ?? __("no"), pluralViews]) }}</p>
 				</div>
