--- a/templates/prototype/user.twig
+++ b/templates/prototype/user.twig
@@ -78,7 +78,7 @@
 					</div>
 				</div>
 			</div>
-			{% if current_user.powerlevel > 2 %}
+			{% if userdata.powerlevel > 2 %}
 			<div class="card mb-2">
 				<div class="card-header">
 					<h5 class="mb-0">{{ __("Administrative Actions") }}</h5>
