--- a/templates/default/components/browsechannelbox.twig
+++ b/templates/default/components/browsechannelbox.twig
@@ -1,13 +1,13 @@
 <div class="card" style="margin-bottom:10px">
 	<div class="card-body text-center">
-		<div class="row"><a href="user.php?name={{ data.username }}">
+		<div class="row"><a href="user.php?name={{ data.name }}">
 			<div class="col-lg-12" style="margin-bottom:15px">
 				<div class="img-thumbnail">
 					<img class="img-fluid rounded-circle" src="{{ profile_image(data.username) }}">
 				</div>
 			</div>
 			<div class="col-lg-12">
-				<h4>{{ data.username }}</h4>
+				<h4>{{ data.name }}</h4>
 			</div>
 		</a></div>
 	</div>
