--- a/templates/default/settings.twig
+++ b/templates/default/settings.twig
@@ -30,14 +30,14 @@
 				<div class="p-4 bg-light border rounded-3">
 					<div class="row">
 						<div class="col-12">
-							<img class="float-start rounded" src="{{ profile_image(current_user.username) }}" style="margin-right: 1.5%;" width="128" alt="pfp">
-							<h2>{{ current_user.username }}</h2>
+							<img class="float-start rounded" src="{{ profile_image(userdata.username) }}" style="margin-right: 1.5%;" width="128" alt="pfp">
+							<h2>{{ userdata.name }}</h2>
 							<p>
-								{% if current_user.email == "poktube_migrated@squarebracket.me" %}
+								{% if userdata.email == "poktube_migrated@squarebracket.me" %}
 								{{ __("Account migrated from PokTube") }}
 								{% else %}
 								{{ icon('envelope', 20) }}
-								<b>{{ __("Email address:") }}</b> {{ current_user.email }}
+								<b>{{ __("Email address:") }}</b> {{ userdata.email }}
 								{% endif %}
 							</p>
 						</div>
@@ -78,23 +78,23 @@
 				<br>
 					<h3>{{ __("Profile picture") }}</h3>
 					<form action="settings.php" method="post" enctype="multipart/form-data">
-					<img class="float-start rounded" src="{{ profile_image(current_user.username) }}" style="margin-right: 1.5%;" width="128" alt="pfp">
+					<img class="float-start rounded" src="{{ profile_image(userdata.username) }}" style="margin-right: 1.5%;" width="128" alt="pfp">
 					<input class="form-control" type="file" name="profilePicture" id="profilePicture">
 					<br/>
 					<h3>{{ __("Display Name") }}</h3>
-					<input type="text" class="form-control" name="displayName" id="displayName" placeholder="{{ current_user.display_name }}">
+					<input type="text" class="form-control" name="displayName" id="displayName" placeholder="{{ userdata.display_name }}">
 					<h3>{{ __("Channel background image") }} {{ __("(Checkmark only)") }}</h3>
-					<input class="form-control" type="file" name="profileBackground" id="profileBackground" {% if current_user.u_flags != 1 %}disabled{% endif %}>
+					<input class="form-control" type="file" name="profileBackground" id="profileBackground" {% if userdata.u_flags != 1 %}disabled{% endif %}>
 					<h3>{{ __("Channel description") }}</h3>
-					<textarea class="form-control" id="description" id="floatingInput" name="description" maxlength="500" style="overflow:hidden;resize:none" rows="3" placeholder="{{ __("Description") }}">{{ current_user.description }}</textarea>
+					<textarea class="form-control" id="description" id="floatingInput" name="description" maxlength="500" style="overflow:hidden;resize:none" rows="3" placeholder="{{ __("Description") }}">{{ userdata.description }}</textarea>
 					todo: move the language selector shit to account
 					<select class="form-select" name="language">
 						{% for code,name in glob_languages %}
-						{% if name %}<option value="{{ code }}" {% if code==current_user.language %}selected{% endif %}>{{ name }}</option>{% endif %}
+						{% if name %}<option value="{{ code }}" {% if code==userdata.language %}selected{% endif %}>{{ name }}</option>{% endif %}
 						{% endfor %}
 					</select>
 					<input type="color" class="form-control" id="color" name="color"
-						value="{{ current_user.color }}">
+						value="{{ userdata.color }}">
 					<input type="hidden" name="updatesettings" value="yes">
 					<input type="submit" class="btn btn-primary" name="action" value="{{ __("Update") }}">
 				</form>
